fix: text-align in user list

--- a/develop/single/styles.css
+++ b/develop/single/styles.css
@@ -775,6 +775,7 @@ titlemod {
 }
 
 .listTextItem {
+    text-align:left;
     align-self:center
 }
 
